@@ -1,3 +1,10 @@
+Mon Sep  1 20:34:31 2014  fox
+
+     172* include/fcterm.h
+          src/fcterm.c
+          src/term.c
+          Fix 'fcterm -ls' not working.
+
 Thu Aug 28 22:28:12 2014  fox
 
      171* include/fcterm.h
